# FlashForge

./: .gitignore  BUILD_SH_FIX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS.md  EVALUATION_GUIDE.md  README.md  app.py  build.sh  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  research_evaluation.py  streamlit_app.py
notebooks/: evaluation_script.py  llm.ipynb
static/: style.css
templates/: base.html  dashboard.html  deck_view.html  decks.html  home.html  login.html  register.html  review.html  upload.html
utils/: auth.py  db.py  deck_handler.py  layout_detect.py  ocr_handler.py  pdf_handler.py  scheduler.py  test.py  text_handler.py
utils/auth/: auth.py
utils/datamodels/: db.py
utils/deckcard/: deck_handler.py  get_fc.py
utils/evaluation/: __init__.py  batch_evaluator.py  dashboard.py  evaluator.py
utils/extraction/: ocr_handler.py  pdf_handler.py  text_cleaner.py
utils/generation/: enhanced_flashcard_gen.py  flashcard_gen.py
utils/reviewer/: review_process.py
utils/scheduler/: db_utils.py  evaluator.py  hybrid_scheduler.py  models.py  samplers.py  scheduler.py
